# conceptnet5

./: .dockerignore  .gitignore  .mailmap  DATA-CREDITS.md  DATA-CREDITS.txt  Dockerfile  LICENSE.txt  MANIFEST.in  Makefile  README.md  Snakefile  TODO.txt  build.sh  compose-build.yml  conftest.py  docker-compose.yaml  docker-compose.yml  done  full-build.Dockerfile  gunicorn-2.sh  gunicorn.sh  ninja.py  overview.txt  partial-build.Dockerfile  partial-build.Makefile  pylintrc  requirements.txt  rules.ninja  runner.sh  setup.cfg  setup.py  start.sh  started  test-full-build.sh  test-quick.sh  test.msgpack  test.sh  upload.sh  uwsgi.ini  wsgi.py
conceptnet5/: api.py  (+33 more)
web/: Dockerfile  README.md  TODO.txt  debug-web.py  docker-compose.yml  fig.yml  setup.cfg  setup.py  wsgi_api.py  wsgi_web.py
web/conceptnet_web/: api.py  error_logging.py  filters.py  json_rendering.py  relations.py  responses.py  version.py  web.py  whereami.py
web/conceptnet_web/static/: index.html
web/conceptnet_web/templates/: _base.html  _macros.html  edge_list.html  error.html  index.html  json.html  node_by_feature.html
web/legacy/: Dockerfile  debug-web.py
web/router/: Dockerfile  fig-conceptnet.conf  nginx.conf
web/router/static/: index.html
web/sandbox/: example.ld.json  example2.ld.json  language-test.html  layout-test.html  notes.txt
web/server/: nginx.conf  supervisord.conf  uwsgi.ini
web/static/: Makefile  index.html
web/templates/: 404.html  _base.html  _macros.html  data.html  edge_list.html  edges.html  error.html  home.html  index.html  json.html  node_by_feature.html
(+1170 files in other folders)
