[metadata]
name = conceptnet-web
author = Robyn Speer
author-email = rspeer@luminoso.com
summary = Web site and API for ConceptNet
description-file = README.md
home-page = https://www.conceptnet.io/
license = Apache-2
classifier =
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3

[files]
packages =
    conceptnet_web
# is there a sane way to declare 'data files' here?

# TODO: entry points
